Added css and about content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Galina Ganeva Portfolio</title>
+    <link rel="stylesheet" href="css/about.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="left-section"></div>
+      <div class="right-section">
+        <div class="button-header">
+          <a href="">About Me</a>
+        </div>
+        <div class="button-header">
+          <a href="">Resume</a>
+        </div>
+      </div>
+    </header>
+    <main id="main-content">
+      <h1>Galina Ganeva</h1>
+      <h4>ABOUT</h4>
+      <div class="about-info">
+        <p>
+          As a UI/UX Designer, I bring a unique set of skills to the table. I am
+          not afraid to speak and present to large groups of people and have a
+          good understanding of different ethnicities and cultures, which helps
+          me work well in a team and make friends easily. My internet knowledge
+          allows me to communicate freely and stay up-to-date with the latest
+          design trends and technologies.
+        </p>
+        <p>
+          One of my best skills is thoroughly analyzing problems, which allows
+          me to solve them quickly and efficiently without getting tired easily.
+          I am a person who can work under pressure, and I confidently call
+          myself responsible and efficient in what I do. I am passionate about
+          clear design and have a keen eye for detail, which enables me to
+          create high-quality design solutions through wireframes, visual
+          designs, and interactive prototypes. I am proficient in Adobe Creative
+          Suite and have experience using multiple prototyping tools. I also
+          have knowledge of mobile and responsive web design and can optimize
+          existing user interface designs.
+        </p>
+      </div>
+      <img
+        class="img-character"
+        src="imgs/character.png"
+        alt="A character waving"
+      />
+      <h4>GET IN TOUCH</h4>
+
+      <img src="" alt="" />
+    </main>
+    <footer class="footer">
+      <div class="left-section"></div>
+      <div class="right-section">
+        <div>
+          <p>Designed By: Me</p>
+          <p>Coded by:</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
