Added some css touches

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </header>
     <main id="main-content">
       <div class="text-section">
-        <h1>Galina Ganeva</h1>
+        <h2 style="font-size: 72px; font-weight: 400">Galina Ganeva</h2>
         <h4 class="about-me">About Me</h4>
         <div class="about-info">
-          <div style="max-width: 715px">
+          <div style="max-width: 715px; margin-right: 80px">
             <p style="margin-top: 9px">
               As a UI/UX Designer, I bring a unique set of skills to the table.
               I am not afraid to speak and present to large groups of people and
