--- a/index.html
+++ b/index.html
@@ -57,21 +57,44 @@
           </div>
           <img
             class="img-character"
-            src="imgs/character.png"
+            src="imgs/character.webp"
             alt="A character waving"
           />
         </div>
-        <h4>GET IN TOUCH</h4>
+        <h4 style="margin-bottom: 10px">GET IN TOUCH</h4>
+        <div class="getInTouch">
+          <div class="icon-container">
+            <a
+              class="test"
+              href="https://www.instagram.com/lolisven/"
+              target="_blank"
+            >
+              <img
+                class="touch-icon"
+                src="imgs/ri_instagram-fill.png"
+                alt="Instagram Icon"
+              />
+            </a>
+          </div>
+          <div class="icon-container">
+            <a
+              class="test"
+              href="https://www.linkedin.com/in/galina-ganeva-91ab49225/"
+              target="_blank"
+            >
+              <img
+                class="touch-icon"
+                src="imgs/mdi_linkedin.png"
+                alt="LinkedIn Icon"
+              />
+            </a>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer">
       <div class="left-section"></div>
-      <div class="right-section">
-        <div>
-          <p>Designed By: Me</p>
-          <p>Coded by:</p>
-        </div>
-      </div>
+      <div class="right-section"></div>
     </footer>
   </body>
 </html>
