Changed px sizing to rem/em

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </header>
     <main id="main-content">
       <div class="text-section">
-        <h2 style="font-size: 72px; font-weight: 400">Galina Ganeva</h2>
+        <h2 style="font-size: 4.5rem; font-weight: 400">Galina Ganeva</h2>
         <h4 class="about-me">About Me</h4>
         <div class="about-info">
-          <div style="max-width: 715px; margin-right: 80px">
-            <p style="margin-top: 9px">
+          <div style="max-width: 45em; margin-right: 5em">
+            <p style="margin-top: 0.6em">
               As a UI/UX Designer, I bring a unique set of skills to the table.
               I am not afraid to speak and present to large groups of people and
               have a good understanding of different ethnicities and cultures,
@@ -61,7 +61,7 @@
             alt="A character waving"
           />
         </div>
-        <h4 style="margin-bottom: 10px">GET IN TOUCH</h4>
+        <h4 style="margin-bottom: 0.625em">GET IN TOUCH</h4>
         <div class="getInTouch">
           <div class="icon-container">
             <a
