Fixed parts of css and html code

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
         </div>
       </div>
     </header>
+
     <main id="main-content">
       <div class="text-section">
         <h2 style="font-size: 4.5rem; font-weight: 400">Galina Ganeva</h2>
         <h4 class="about-me">About Me</h4>
+        <!-- About Info -->
         <div class="about-info">
+          <!-- About Text -->
           <div style="max-width: 45em; margin-right: 5em">
             <p style="margin-top: 0.6em">
               As a UI/UX Designer, I bring a unique set of skills to the table.
@@ -55,14 +58,19 @@
               designs.
             </p>
           </div>
+          <!-- Character Icon -->
           <img
             class="img-character"
             src="imgs/character.webp"
             alt="A character waving"
           />
         </div>
+
         <h4 style="margin-bottom: 0.625em">GET IN TOUCH</h4>
-        <div class="getInTouch">
+
+        <!-- Get in Touch Section -->
+        <div class="get-in-touch">
+          <!-- Instagram Icon -->
           <div class="icon-container">
             <a
               class="test"
@@ -76,6 +84,7 @@
               />
             </a>
           </div>
+          <!-- LinkedIn Icon -->
           <div class="icon-container">
             <a
               class="test"
@@ -92,6 +101,7 @@
         </div>
       </div>
     </main>
+
     <footer class="footer">
       <div class="left-section"></div>
       <div class="right-section"></div>
