Commented footer out temporary

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="left-section"></div>
       <div class="right-section"></div>
-    </footer>
+    </footer> -->
   </body>
 </html>
