Added changes to css styling and spacing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   </head>
   <body>
     <header class="header">
-      <div class="left-section"></div>
+      <div class="left-section">
+        <div class="gg-logo">
+          <a class="gg-link" href="">GG</a>
+        </div>
+      </div>
       <div class="middle-section"></div>
       <div class="right-section">
         <div class="button-header">
@@ -30,7 +34,9 @@
 
     <main id="main-content">
       <div class="text-section">
-        <h2 style="font-size: 4.5rem; font-weight: 400">Galina Ganeva</h2>
+        <h2 style="font-size: 4.5rem; font-weight: 400; margin-bottom: 2rem">
+          Galina Ganeva
+        </h2>
         <h4 class="about-me">About Me</h4>
         <!-- About Info -->
         <div class="about-info">
