--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galina Ganeva Portfolio</title>
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/index.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="left-section">
         <div class="gg-logo">
@@ -24,7 +25,7 @@
       <div class="middle-section"></div>
       <div class="right-section">
         <div class="button-header">
-          <a href="">About Me</a>
+          <a href="about.html">About Me</a>
         </div>
         <div class="button-header">
           <a href="">Resume</a>
@@ -32,85 +33,13 @@
       </div>
     </header>
 
-    <main id="main-content">
-      <div class="text-section">
-        <h2 style="font-size: 4.5rem; font-weight: 400; margin-bottom: 2rem">
-          Galina Ganeva
-        </h2>
-        <h4 class="about-me">About Me</h4>
-        <!-- About Info -->
-        <div class="about-info">
-          <!-- About Text -->
-          <div style="max-width: 45em; margin-right: 5em">
-            <p style="margin-top: 0.6em">
-              As a UI/UX Designer, I bring a unique set of skills to the table.
-              I am not afraid to speak and present to large groups of people and
-              have a good understanding of different ethnicities and cultures,
-              which helps me work well in a team and make friends easily. My
-              internet knowledge allows me to communicate freely and stay
-              up-to-date with the latest design trends and technologies.
-            </p>
-            <p>
-              One of my best skills is thoroughly analyzing problems, which
-              allows me to solve them quickly and efficiently without getting
-              tired easily. I am a person who can work under pressure, and I
-              confidently call myself responsible and efficient in what I do. I
-              am passionate about clear design and have a keen eye for detail,
-              which enables me to create high-quality design solutions through
-              wireframes, visual designs, and interactive prototypes. I am
-              proficient in Adobe Creative Suite and have experience using
-              multiple prototyping tools. I also have knowledge of mobile and
-              responsive web design and can optimize existing user interface
-              designs.
-            </p>
-          </div>
-          <!-- Character Icon -->
-          <img
-            class="img-character"
-            src="imgs/character.webp"
-            alt="A character waving"
-          />
-        </div>
+    <!-- Main -->
+    <main id="main-content"></main>
 
-        <h4 style="margin-bottom: 0.625em">GET IN TOUCH</h4>
-
-        <!-- Get in Touch Section -->
-        <div class="get-in-touch">
-          <!-- Instagram Icon -->
-          <div class="icon-container">
-            <a
-              class="test"
-              href="https://www.instagram.com/lolisven/"
-              target="_blank"
-            >
-              <img
-                class="touch-icon"
-                src="imgs/ri_instagram-fill.png"
-                alt="Instagram Icon"
-              />
-            </a>
-          </div>
-          <!-- LinkedIn Icon -->
-          <div class="icon-container">
-            <a
-              class="test"
-              href="https://www.linkedin.com/in/galina-ganeva-91ab49225/"
-              target="_blank"
-            >
-              <img
-                class="touch-icon"
-                src="imgs/mdi_linkedin.png"
-                alt="LinkedIn Icon"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <!-- <footer class="footer">
+    <!-- Footer -->
+    <footer class="footer">
       <div class="left-section"></div>
       <div class="right-section"></div>
-    </footer> -->
+    </footer>
   </body>
 </html>
