Added Initial hero section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
     </header>
 
     <!-- Main -->
-    <main id="main-content"></main>
+    <main id="main-content">
+      <!-- First Section -->
+      <div id="hero-section">
+        <div class="hero-text">
+          <p class="hero-title">
+            HI, I'M
+            <span class="hero-name">GALINA</span>
+          </p>
+          <p class="hero-desc">A web design student and an aspiring designer</p>
+        </div>
+        <div class="hero-portfolio">
+          <p class="hero-portfolio-text">MY PORT FOLIO</p>
+        </div>
+      </div>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
