--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
       <div id="hero-section">
         <div class="hero-text">
           <p class="hero-title">
-            HI, I'M
+            <span style="background-color: white;">HI, I'M</span>         
             <span class="hero-name">GALINA</span>
           </p>
-          <p class="hero-desc">A web design student and an aspiring designer</p>
         </div>
+        <p class="hero-desc">A web design student and an aspiring designer</p>
+        <div class="empty-background"></div>
         <div class="hero-portfolio">
           <p class="hero-portfolio-text">MY PORT FOLIO</p>
         </div>
