--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="hero-section">
         <div class="hero-text">
           <p class="hero-title">
-            <span style="background-color: white;">HI, I'M</span>         
+            <span style="background-color: #fafafa">HI, I'M</span>
             <span class="hero-name">GALINA</span>
           </p>
         </div>
@@ -48,6 +48,11 @@
         <div class="hero-portfolio">
           <p class="hero-portfolio-text">MY PORT FOLIO</p>
         </div>
+      </div>
+      <!-- Arrows -->
+      <div class="arrow-container">
+        <i class="arrow-down"></i>
+        <i class="arrow-down"></i>
       </div>
     </main>
 
