--- a/about.html
+++ b/about.html
@@ -22,14 +22,10 @@
         </div>
       </div>
       <div class="middle-section"></div>
-      <div class="right-section">
-        <div class="button-header">
-          <a href="">About Me</a>
-        </div>
-        <div class="button-header">
-          <a href="">Resume</a>
-        </div>
-      </div>
+      <nav class="right-section">
+        <a href="about.html">About Me</a>
+        <a href="">Resume</a>
+      </nav>
     </header>
 
     <main id="main-content">
