--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <img class="hero-background" src="imgs/background.png" alt="" />
+
     <!-- Header -->
     <header class="header">
       <div class="left-section">
@@ -36,7 +37,7 @@
     <!-- Main -->
     <main id="main-content">
       <!-- First Section -->
-      <section class="transparent">
+      <section class="first-section transparent">
         <div id="hero-section" class="transparent hidden">
           <div class="hero-text">
             <p class="hero-title">
@@ -57,8 +58,27 @@
         </div>
       </section>
 
-      <section>
-        <div class="hidden"></div>
+      <section class="second-section">
+        <div class="item-section hidden">
+          <div class="project-text-container">
+            <p class="projects-text">MY PROJECTS</p>
+          </div>
+          <div class="project-container">
+            <div class="project-img">
+              <img
+                class="project-picture"
+                src="imgs/project1.png"
+                alt="First Project Picture"
+              />
+            </div>
+            <div class="project-text">
+              <p class="project-year">2022</p>
+              <p class="project-title">Casetify Home Page Redesign</p>
+              <p class="project-desc">Lorem ipsum seit mein dupe</p>
+              <a href="">View Project</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
