Fixed alingment and picture

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
           <i class="arrow-down"></i>
         </div>
       </section>
-
+      <!-- My Projects -->
+      <div class="project-text-container">
+        <p class="projects-text">MY PROJECTS</p>
+      </div>
+      <!-- Second Section -->
       <section class="second-section">
         <div class="item-section hidden">
-          <div class="project-text-container">
-            <p class="projects-text">MY PROJECTS</p>
-          </div>
           <div class="project-container">
             <div class="project-img">
               <img
@@ -73,9 +74,11 @@
             </div>
             <div class="project-text">
               <p class="project-year">2022</p>
-              <p class="project-title">Casetify Home Page Redesign</p>
-              <p class="project-desc">Lorem ipsum seit mein dupe</p>
-              <a href="">View Project</a>
+              <div class="project-content">
+                <p class="project-title">Casetify Home Page Redesign</p>
+                <p class="project-desc">Lorem ipsum seit mein dupe</p>
+                <a class="view-project" href="">View Project</a>
+              </div>
             </div>
           </div>
         </div>
