--- a/index.html
+++ b/index.html
@@ -85,6 +85,35 @@
           </div>
         </div>
       </section>
+      <!-- Separation Line -->
+      <div class="first-line separation-line">
+        <div class="line"></div>
+      </div>
+      <!-- Third Section -->
+      <section class="third-section">
+        <div class="item-section hidden-left">
+          <div class="project-container">
+            <div class="project-img">
+              <img
+                class="project-picture"
+                src="imgs/project2.png"
+                alt="Second Project Picture"
+              />
+            </div>
+            <div class="project-text">
+              <p class="project-year">2022</p>
+              <div class="project-content">
+                <p class="project-title">Spotify Home Screen Redesign</p>
+                <p class="project-desc">
+                  A version of the current Spotify home screen that simpifies
+                  the user flow
+                </p>
+                <a class="view-project" href="">View Project</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
