Added header blur

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img class="hero-background" src="imgs/background.png" alt="" />
 
     <!-- Header -->
-    <header class="header">
+    <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
           <a class="gg-link" href="">GG</a>
