--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="left-section">
         <div class="gg-logo">
@@ -22,12 +23,15 @@
         </div>
       </div>
       <div class="middle-section"></div>
-      <nav class="right-section">
-        <a href="about.html">About Me</a>
-        <a href="">Resume</a>
-      </nav>
+      <div class="right-section">
+        <ul class="list">
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="">Resume</a></li>
+        </ul>
+      </div>
     </header>
 
+    <!-- Main Content -->
     <main id="main-content">
       <div class="text-section">
         <h2 style="font-size: 4.5rem; font-weight: 400; margin-bottom: 2rem">
@@ -103,5 +107,31 @@
         </div>
       </div>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="middle-section">
+        <div class="contact-container">
+          <a class="footer-click" href="mailto:galina.gganeva@gmail.com"
+            >galina.gganeva@gmail.com</a
+          >
+          <a class="footer-click" href="tel:+359 898 710 566"
+            >+359 898 710 566</a
+          >
+        </div>
+        <div class="credit-container">
+          <p class="footer-text">Designed by me</p>
+          <p class="footer-text">
+            Coded by
+            <a
+              class="footer-click"
+              href="https://github.com/Maglata"
+              target="_blank"
+              >Stefan Gavrailov</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
