--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galina Ganeva Portfolio</title>
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/footer.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +18,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
           <a class="gg-link" href="index.html">GG</a>
