--- a/index.html
+++ b/index.html
@@ -69,19 +69,24 @@
       <section class="second-section">
         <div class="item-section hidden-right">
           <div class="project-container">
+            <!-- Image -->
             <div class="project-img">
-              <img
-                class="project-picture"
-                src="imgs/project1.png"
-                alt="First Project Picture"
-              />
+              <a href="project1.html"
+                ><img
+                  class="project-picture"
+                  src="imgs/project1.png"
+                  alt="First Project Picture"
+              /></a>
             </div>
+
             <div class="project-text">
               <p class="project-year">2022</p>
               <div class="project-content">
-                <p class="project-title">Casetify Home Page Redesign</p>
+                <a class="project-title" href="project1.html"
+                  >Casetify Home Page Redesign</a
+                >
                 <p class="project-desc">Lorem ipsum seit mein dupe</p>
-                <a class="view-project" href="">View Project</a>
+                <a class="view-project" href="project1.html">View Project</a>
               </div>
             </div>
           </div>
