Adjusted values and mobile view

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </div>
       </section>
       <!-- Separation Line -->
-      <div class="first-line separation-line">
-        <div class="line"></div>
+      <div class="separation-line">
+        <div class="line hidden-right"></div>
       </div>
       <!-- Third Section -->
       <section class="third-section">
