--- a/project1.html
+++ b/project1.html
@@ -44,6 +44,36 @@
         </div>
       </section>
       <section id="second-section">
+        <!-- Project Info -->
+        <div class="project-info">
+          <!-- Col 1 -->
+          <div class="project-col">
+            <!-- Type of Product -->
+            <div class="info-container">
+              <p class="info-title">TYPE OF PROJECT</p>
+              <p class="info-content">Redesign</p>
+            </div>
+            <!-- Software Used -->
+            <div class="info-container">
+              <p class="info-title">SOFTWARE USED</p>
+              <p class="info-content">Photoshop</p>
+            </div>
+          </div>
+          <!-- Col 2 -->
+          <div class="project-col">
+            <!-- Category -->
+            <div class="info-container">
+              <p class="info-title">CATEGORY</p>
+              <p class="info-content">Website</p>
+            </div>
+
+            <!-- Date -->
+            <div class="info-container">
+              <p class="info-title">DATE</p>
+              <p class="info-content">January 2022</p>
+            </div>
+          </div>
+        </div>
         <!-- Project Text -->
         <div class="project-text">
           <!-- Problem -->
@@ -79,7 +109,7 @@
           <div class="project-text-section">
             <div class="section-title">Research</div>
             <div class="section-text">
-              <p>
+              <p style="padding-bottom: 0">
                 To start, I researched the brand, mission, vision, and target
                 audience to gain a deeper understanding of the company's values
                 and goals. Then, I analyzed the existing homepage and studied
@@ -95,35 +125,6 @@
                 visual identity, I developed a design that aligned with
                 Casetify's brand guidelines.
               </p>
-            </div>
-          </div>
-        </div>
-        <!-- Project Info -->
-        <div class="project-info">
-          <!-- Row 1 -->
-          <div class="project-row">
-            <!-- Type of Product -->
-            <div class="info-container">
-              <p class="info-title">TYPE OF PROJECT</p>
-              <p class="info-content">Redesign</p>
-            </div>
-            <!-- Category -->
-            <div class="info-container">
-              <p class="info-title">CATEGORY</p>
-              <p class="info-content">Website</p>
-            </div>
-          </div>
-          <!-- Row 2 -->
-          <div class="project-row">
-            <!-- Software Used -->
-            <div class="info-container">
-              <p class="info-title">SOFTWARE USED</p>
-              <p class="info-content">Photoshop</p>
-            </div>
-            <!-- Date -->
-            <div class="info-container">
-              <p class="info-title">DATE</p>
-              <p class="info-content">January 2022</p>
             </div>
           </div>
         </div>
