Adjusted header and some mobile sizes

--- a/about.html
+++ b/about.html
@@ -24,7 +24,6 @@
           <a class="gg-link" href="index.html">GG</a>
         </div>
       </div>
-      <div class="middle-section"></div>
       <div class="right-section">
         <ul class="list">
           <li><a href="about.html">About Me</a></li>
@@ -36,14 +35,12 @@
     <!-- Main Content -->
     <main id="main-content">
       <div class="text-section">
-        <h2 style="font-size: 4.5rem; font-weight: 400; margin-bottom: 2rem">
-          Galina Ganeva
-        </h2>
+        <h2 class="about-name">Galina Ganeva</h2>
         <h4 class="about-me">About Me</h4>
         <!-- About Info -->
         <div class="about-info">
           <!-- About Text -->
-          <div style="max-width: 45em; margin-right: 5em">
+          <div style="max-width: 45em">
             <p style="margin-top: 0.6em">
               As a UI/UX Designer, I bring a unique set of skills to the table.
               I am not afraid to speak and present to large groups of people and
