--- a/project1.html
+++ b/project1.html
@@ -128,6 +128,17 @@
           </div>
         </div>
       </section>
+      <section id="third-section">
+        <div class="section-title preview-title centered">Preview</div>
+        <div class="preview-container centered">
+          <div class="preview centered">
+            <img class="preview-screen" src="imgs/laptop.png" alt="Laptop" />
+          </div>
+          <div class="preview-content">
+            <img class="full" src="imgs/preview1.png" alt="Preview of Site" />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
