Added Spotify Section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   alt="First Project Picture"
               /></a>
             </div>
-
+            <!-- Text -->
             <div class="project-text">
               <p class="project-year">2022</p>
               <div class="project-content">
@@ -99,22 +99,27 @@
       <section class="third-section">
         <div class="item-section hidden-left">
           <div class="project-container">
+            <!-- Image -->
             <div class="project-img">
-              <img
-                class="project-picture"
-                src="imgs/project2.png"
-                alt="Second Project Picture"
-              />
+              <a href="project2.html"
+                ><img
+                  class="project-picture"
+                  src="imgs/project2.png"
+                  alt="Second Project Picture"
+              /></a>
             </div>
+            <!-- Text -->
             <div class="project-text">
-              <p class="project-year">2022</p>
+              <p class="project-year">2023</p>
               <div class="project-content">
-                <p class="project-title">Spotify Home Screen Redesign</p>
+                <a href="project2.html" class="project-title"
+                  >Spotify Home Screen Redesign</a
+                >
                 <p class="project-desc">
                   A version of the current Spotify home screen that simpifies
                   the user flow
                 </p>
-                <a class="view-project" href="">View Project</a>
+                <a class="view-project" href="project2.html">View Project</a>
               </div>
             </div>
           </div>
