--- a/project1.html
+++ b/project1.html
@@ -33,6 +33,7 @@
     </header>
     <!-- Main Page -->
     <main id="main-page">
+      <!-- Opening Section -->
       <section id="first-section">
         <div class="project-background">
           <img
@@ -42,6 +43,7 @@
           />
         </div>
       </section>
+      <!-- Text Section -->
       <section id="second-section">
         <!-- Project Info -->
         <div class="project-info">
@@ -128,8 +130,10 @@
           </div>
         </div>
       </section>
+      <!-- Preview Section -->
       <section id="third-section">
         <div class="section-title preview-title centered">Preview</div>
+        <!-- Preview -->
         <div class="preview-container centered">
           <div class="preview centered">
             <img class="preview-screen" src="imgs/laptop.png" alt="Laptop" />
