Adjusted phone sizing

--- a/project2.html
+++ b/project2.html
@@ -81,7 +81,7 @@
           <div class="project-text-section">
             <div class="section-title">Problem</div>
             <div class="section-text">
-              <p>
+              <p style="padding-bottom: 0">
                 During a conversation with my friends, I gathered valuable
                 insights regarding their experience with the desktop app version
                 of Spotify. The feedback I received was consistent in
@@ -113,7 +113,7 @@
           <div class="project-text-section">
             <div class="section-title">Research</div>
             <div class="section-text">
-              <p>
+              <p style="padding-bottom: 0">
                 As part of my redesign of Spotify's homescreen, I conducted a
                 user research study with a sample of approximately 6
                 individuals, consisting of friends and family members. To ensure
@@ -122,7 +122,7 @@
                 tend to have more difficulty navigating through digital
                 interfaces.
               </p>
-              <p>
+              <p style="padding-bottom: 0">
                 Through a combination of one-on-one interviews and surveys, I
                 gathered feedback from participants on their likes and dislikes
                 of the current interface. This feedback was then compiled and
