--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <p class="projects-text">MY PROJECTS</p>
       </div>
       <!-- Second Section -->
-      <section class="second-section">
+      <section class="project-section second-section">
+        <!-- Project Container -->
         <div class="item-section hidden-right">
           <div class="project-container">
             <!-- Image -->
@@ -90,13 +91,38 @@
             </div>
           </div>
         </div>
+        <!-- Project Number Line -->
+        <div class="project-number-container hidden-right">
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-line"></div>
+          <div class="project-number">01</div>
+          <div class="project-line"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+        </div>
       </section>
       <!-- Separation Line -->
-      <div class="separation-line">
-        <div class="line hidden-right"></div>
+      <div class="separation-line hidden-right">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="line"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
       </div>
       <!-- Third Section -->
-      <section class="third-section">
+      <section class="project-section third-section">
+        <!-- Project Container -->
         <div class="item-section hidden-left">
           <div class="project-container">
             <!-- Image -->
@@ -123,6 +149,78 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- Project Number Line -->
+        <div class="project-number-container hidden-left">
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-line"></div>
+          <div class="project-number">02</div>
+          <div class="project-line"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+        </div>
+      </section>
+      <!-- Separation Line -->
+      <div class="separation-line hidden-left">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="line"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+      <!-- Fourth Section -->
+      <section class="project-section fourth-section">
+        <!-- Project Container -->
+        <div class="item-section hidden-right">
+          <div class="project-container">
+            <!-- Image -->
+            <div class="project-img">
+              <a href="project1.html"
+                ><img
+                  class="project-picture"
+                  src="imgs/project1.png"
+                  alt="First Project Picture"
+              /></a>
+            </div>
+            <!-- Text -->
+            <div class="project-text">
+              <p class="project-year">2022</p>
+              <div class="project-content">
+                <a class="project-title" href="project1.html"
+                  >Casetify Home Page Redesign</a
+                >
+                <p class="project-desc">Lorem ipsum seit mein dupe</p>
+                <a class="view-project" href="project1.html">View Project</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Project Number Line -->
+        <div class="project-number-container hidden-right">
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-line"></div>
+          <div class="project-number">03</div>
+          <div class="project-line"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
         </div>
       </section>
     </main>
